--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/game.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/app.ts"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "socket.io": "^4.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
